<resources>
    <string name="app_name">Keelung Start!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">基隆旅遊Start!</string>
    <string name="home">首頁</string>
    <string name="gps">GPS定位中....</string>
    <string name="gps2">GPS座標:(</string>
    <string name="gps3">現在位置</string>
    <string name="gps4">GPS定位完成</string>
    <string name="gps5">GPS未開啟!!</string>
    <string name="gps6">GPS已開啟</string>
    <string name="gps7">緯度：</string>
    <string name="gps8">經度：</string>
    <string name="gps9">距離目前位置(直線)：</string>
    <string name="gps10">已經到達</string>
    <string name="gtgs">交通資訊</string>
    <string name="kg">【自行開車】</string>
    <string name="tg">【大眾運輸】</string>
    <string name="gnch">您可以選擇您要插入的景點。</string>
    <string name="gnch2">單一景點</string>
    <string name="hz">插入</string>
    <string name="br">返回</string>
    <string name="go">您可以輸入你要前往的地名(例如:泰安瀑布),或者是經緯度座標(例如:25.0715,121.7164)</string>
    <string name="gte">請輸入距離</string>
    <string name="gte1">您可以選擇附近景點的收尋範圍</string>
    <string name="gte2">您可以選擇附近停車場的收尋範圍</string>
    <string name="gte3">您可以選擇行程景點到達之判定範圍</string>
    <string name="gte4">警告：距離值大於100公尺可能會有誤差問題！</string>
    <string name="m">公尺</string>
    <string name="k">公里</string>
    <string name="ok">完成</string>
    <string name="sfgt">儲存</string>
    <string name="sfgt1">取消</string>
    <string name="sfgt2">拍照</string>
    <string name="sfgt3">選取相片</string>
    <string name="sfgt4">移除相片</string>
    <string name="sfgt5">標題</string>
    <string name="sfgt6">GPS座標</string>
    <string name="sfgt7">取得座標</string>
    <string name="sfgt8">內容</string>
    <string name="sfgt9">副標題</string>
    <string name="sfgt10">交通資訊</string>
    <string name="sfgt11">刪除</string>
    <string name="sfgt12">私房景點</string>
    <string name="sfgt13">未命名的</string>
    <string name="sfgt14">確定要刪除?</string>
    <string-array name="gz">
        <item>公尺</item>
        <item>公里</item>
    </string-array>
    <string name="nosfgt">您沒有私房景點</string>
    <string name="fgsfgt">附近的私房景點</string>
    <string name="lugf">起點:</string>
    <string name="lugf1">您可以選擇您起點位置</string>
    <string name="lugf2">終點:</string>
    <string name="lugf3">您可以選擇您終點位置</string>
    <string name="lugf4">規劃</string>
    <string name="lugf5">您尚未規畫行程</string>
    <string name="lugf6">已經加入至行程!!</string>
    <string name="lugf7">行程</string>
<string-array name="lugf8">
        <item>您已經有行程!</item>
        <item>確定要重新規劃行程?</item>
    </string-array>
    <string name="lugf9">您沒有私房景點!!</string>
    <string name="lugf10">請問您是要</string>
    <string name="lugf11">前往</string>
    <string name="lugf12">請問您是要將</string>
    <string name="lugf13">移動到</string>
    <string name="lugf14">的</string>
    <string name="lugf15">上方</string>
    <string name="lugf16">下方</string>
    <string name="lugf17">移動</string>
    <string name="lugf18">您確定要把</string>
    <string name="lugf19">從行程中</string>
    <string name="lugf20">取消移動</string>
    <string name="lugf21">請點選你要移動至的位置</string>
    <string name="lugf22">請問您是要插入在</string>
    <string name="lugf23">請問您是要在</string>
    <string name="lugf24">確定要清空行程?</string>
    <string name="mu">您可以選擇是否開啟音效</string>
<string-array name="nmfc">
        <item>自動</item>
        <item>直向</item>
        <item>橫向</item>
    </string-array>
    <string name="nmfc1">您可以調整螢幕背光</string>
    <string name="search">請輸入搜尋內容</string>
    <string name="search1">無搜尋結果</string>
    <string name="search2">搜尋</string>
    <string name="text">您可以自訂字體大小</string>
    <string name="menu">導航到此</string>
    <string name="menu1">網路搜尋</string>
    <string name="menu2">網站連結</string>
    <string name="menu3">編輯</string>
    <string name="menu4">小算盤</string>
    <string name="menu5">加入至行程</string>
    <string name="menu7">規劃行程</string>
    <string name="menu8">清空行程</string>
    <string name="menu9">停管處</string>
    <string name="about">關於</string>
    <string name="set">設定</string>
    <string name="att">停車場</string>
    <string name="gt">景點</string>
    <string name="setatt">自訂停車場</string>
    <string name="nosetatt">您沒有自訂停車場</string>
    <string name="fgatt">附近停車場</string>
    <string name="fggt">附近景點</string>
    <string name="fgsetatt">附近的自訂停車場</string>
    <string name="gzfgsetatt">建立自訂停車場</string>
    <string name="nfg">您附近</string>
    <string name="mno">公尺沒有</string>
    <string name="kno">公里沒有</string>
    <string name="no">沒有</string>
    <string name="ca">確定</string>
    <string name="opcam">開啟相機</string>
    <string name="bre">再按一次返回鍵即可退出程式</string>
    <string name="con">確認</string>
    <string name="con1">確定要離開?</string>
    <string name="sta">開始</string>
    <string name="end">結束</string>
    <string name="end2">離開</string>
    <string name="th">導航</string>
    <string name="tht">導航到....</string>
    <string name="nosl">不能空白!!</string>
    <string name="version">3.3</string>
    <string name="backup">備份</string>
    <string name="nobackup">無備份紀錄</string>
    <string name="nobackup2">無備份檔案</string>
    <string name="completed">已完成</string>
    <string name="backuptime">上次備份日期:</string>
    <string name="recover">還原</string>
    <string name="tc">提示:長按可以重新命名/刪除備份。</string>
    <string name="barets">您可以備份/還原私房景點與自訂停車場。</string>
    <string name="backupfile">請選擇備份檔</string>
    <string name="backupug">備份資料位置:</string>
    <string name="ontdata">無資料可備份!!</string>
    <string name="del">確定要刪除</string>
    <string name="frongps">從GPS</string>
    <string name="fronim">從照片</string>
    <string name="backupname">備份檔名</string>
    <string name="backupname2">請輸入備份檔名</string>
    <string name="file">檔案已存在</string>
    <string name="ynfg">是否要覆蓋</string>
    <string name="nofilename">檔案名稱中不可以包含下列字元：</string>
    <string name="gtin">景點介紹</string>
    <string name="tsin">停車場介紹</string>
    <string name="map">地圖</string>
    <string name="backuppath">修改備份資料位置</string>
    <string name="selectbackuppath">選擇備份資料位置</string>
    <string name="addpath">新增資料夾</string>
    <string name="pathname">資料夾名稱</string>
    <string name="pathpresence">資料夾已存在</string>
    <string name="selectpath">選取位置</string>
    <string name="presetpath">預設位置</string>
    <string name="notempty">不是空的，</string>
    <string name="notfile">資料夾無法使用!!</string>
    <string name="renamepath">重新命名資料夾</string>
    <string name="rename">重新命名</string>
    <string name="pleasewait">請稍後&#8230;</string>
    <string name="previous">上一頁..</string>
    <string name="all">總共</string>
    <string name="project">個項目</string>
    <string name="watchout">注意：本功能具有新增、重新命名、刪除資料夾的功能，且並不會顯示路徑內除了資料夾以外之檔案，若使用不當可能會遺失您重要的檔案，所以請謹慎使用。</string>
    <string name="folder">個資料夾，</string>
    <string name="chooselugf">選擇行程</string>
    <string name="notlugf">您沒有行程</string>
    <string name="lugfname">行程名稱</string>
    <string name="addlugf">新增行程</string>
    <string name="moveoff">已取消移動!</string>
    <string name="kegjn">基隆市簡介</string>
    <string name="Itinerary_List">行程列表</string>
<string-array name="cam">
        <item>很抱歉，相片讀取錯誤!</item>
        <item>您所使用的相機可能不支援此程式。\n您可以選擇\"開啟相機\"拍照，在按\"選取相片\"從相簿中挑選相片。</item>
    </string-array>
<string-array name="gtestring">
        <item>半徑300公尺</item>
        <item>半徑500公尺</item>
        <item>半徑800公尺</item>
        <item>半徑1公里</item>
        <item>自訂</item>
    </string-array>
<string-array name="gtestring2">
        <item>半徑10公尺</item>
        <item>半徑50公尺</item>
        <item>半徑100公尺</item>
        <item>半徑150公尺</item>
        <item>自訂</item>
    </string-array>
<string-array name="gtetext">
        <item>小</item>
        <item>中</item>
        <item>大</item>
        <item>特大</item>
    </string-array>
<string-array name="music">
        <item>開啟</item>
        <item>關閉</item>
    </string-array>
<string-array name="nmfc2">
        <item>預設</item>
        <item>恆亮</item>
    </string-array>
<string-array name="jtgs">
        <item>基隆市公車</item>
        <item>台灣鐵路</item>
    </string-array>
<string-array name="bus">
        <item>101 和平島-基隆車站(經中正路)</item>
    </string-array>
<string-array name="bus101">
        <item>和平島總站</item>
        <item>阿拉寶灣站</item>
        <item>和平國小站</item>
        <item>和平島公園站</item>
        <item>和平島站</item>
        <item>協同造船廠站</item>
        <item>社寮里站</item>
        <item>和平橋站</item>
        <item>正濱路站</item>
        <item>中正區公所站</item>
        <item>二信分社站</item>
        <item>中濱里站</item>
        <item>海調處站</item>
        <item>公教國宅站</item>
        <item>正榮街口(安瀾橋)站</item>
        <item>公車處(榮民中心)站</item>
        <item>海門天險</item>
        <item>復興路</item>
        <item>修理廠(統一球館)</item>
        <item>中船路</item>
        <item>就業中心(三砂灣)</item>
        <item>信七路口</item>
        <item>信五路口</item>
        <item>市政府</item>
        <item>仁二路(二信循環站)</item>
        <item>總站</item>
    </string-array>
<string-array name="gtegt">
        <item>無</item>
        <item>現在位置</item>
        <item>*私房景點*</item>
        <item>泰安瀑布</item>
        <item>仙洞</item>
        <item>白米甕砲台</item>
        <item>海門天險</item>
        <item>外木山</item>
        <item>和平島</item>
        <item>十八羅漢洞</item>
        <item>望憂谷</item>
        <item>海科館</item>
        <item>龍崗步道</item>
        <item>情人湖公園</item>
        <item>大武崙砲台</item>
        <item>中正公園</item>
        <item>海洋廣場</item>
        <item>基隆嶼</item>
        <item>基隆廟口</item>
        <item>西濱公路觀海休憩步道</item>
        <item>瑪西賞桐步道(富民親水公園)</item>
        <item>暖東峽谷</item>
        <item>城隍廟</item>
        <item>慶安宮</item>
        <item>靈泉禪寺</item>
        <item>主普壇</item>
        <item>一太e衛廚觀光工廠</item>
        <item>劉銘傳隧道</item>
        <item>北白川宮能久親王紀念碑</item>
        <item>許梓桑古厝</item>
        <item>民族英雄墓(海門公園)</item>
        <item>築港殉職者紀念碑</item>
        <item>清法戰爭遺址</item>
        <item>仙洞莊佛手洞</item>
        <item>頂石閣砲臺(中正區)</item>
        <item>八斗子公園</item>
        <item>暖暖親水公園</item>
        <item>役政公園</item>
        <item>暖暖運動公園</item>
        <item>百福運動公園（百福水漾樂活會館）</item>
        <item>暖東苗圃</item>
        <item>金龍湖</item>
        <item>虎仔山步道</item>
        <item>紅淡山步道</item>
        <item>姜子寮山步道</item>
        <item>永嘉景觀步道(紅龍山)</item>
        <item>六堵險圳步道</item>
        <item>正濱漁港（懷舊碼頭）</item>
        <item>元璋玻璃科技館</item>
        <item>七堵火車站鐵道公園</item>
        <item>葉山藥園休閒農場</item>
        <item>添財休閒農場</item>
        <item>文良休閒農場</item>
        <item>龍順觀光果園</item>
        <item>苓蘭生態農園</item>
        <item>和平島天顯宮</item>
        <item>官道百年福德宮</item>
    </string-array>
</resources>