<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfgt" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfgt11" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfgt1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.19"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textgtksu5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sfgt2" />

                        <Button
                            android:id="@+id/button5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sfgt3" />

                        <Button
                            android:id="@+id/button7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sfgt4" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sfgt5" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sfgt6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="46dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.04"
                            android:ems="10"  
                        android:inputType="numberDecimal" >
                    </EditText>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="," />

                        <EditText
                            android:id="@+id/editText4"
                            android:layout_width="83dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.03"
                            android:ems="10"  
                        android:inputType="numberDecimal" >
                    </EditText>

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sfgt7" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sfgt8" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="true" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sfgt9" />

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/sfgt10" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sfgt8" />

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
