<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    
    <Spinner
        android:id="@+id/gtesoinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/gte"
            android:inputType="numberDecimal" >
        </EditText>

        <Spinner
            android:id="@+id/Sp1"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawSelectorOnTop="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gte1" />
    
    <Spinner
        android:id="@+id/gtesoinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/gte"
            android:inputType="numberDecimal" >
        </EditText>

        <Spinner
            android:id="@+id/Sp2"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawSelectorOnTop="true" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gte2" />
    
     <Spinner
        android:id="@+id/gtesoinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/gte"
            android:inputType="numberDecimal" >
        </EditText>

         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/m" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFF0000"
        android:text="@string/gte4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gte3" />
            
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
